<?xml version="1.0"?>
<package format="3">
  <name>moveit2_tutorials</name>
  <version>0.1.0</version>
  <description>The moveit2_tutorials package</description>
  <license>BSD</license>

  <author email="sachinc@willowgarage.com">Sachin Chitta</author>
  <author email="dave@picknik.ai">Dave Coleman</author>
  <author email="mike@picknik.ai">Mike Lautman</author>

  <maintainer email="dave@picknik.ai">Dave Coleman</maintainer>
  <maintainer email="mike@picknik.ai">Mike Lautman</maintainer>

  <url type="website">https://moveit.picknik.ai</url>
  <url type="repository">https://github.com/ros-planning/moveit2_tutorials</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit2_tutorials/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_servo</depend>
  <depend>moveit_hybrid_planning</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_msgs</depend>
  <!-- <depend>pcl_conversions</depend> -->
  <!-- <depend>pcl_ros</depend> -->
  <depend>pluginlib</depend>
  <!-- <depend>rosbag</depend> -->
  <depend>rviz_visual_tools</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>pick_ik</depend>

  <build_depend>eigen</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>moveit_common</build_depend>
  <build_depend>moveit_ros_planning</build_depend>

  <!-- <exec_depend>franka_description</exec_depend> -->
  <!-- <exec_depend>moveit_commander</exec_depend> -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>jupyter-notebook</exec_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>kinova_gen3_7dof_robotiq_2f_85_moveit_config</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- An example controller manager plugin for MoveIt. This is not functional code. -->
    <moveit_core plugin="${prefix}/doc/controller_configuration/moveit_controller_manager_example_plugin_description.xml"/>

    <!-- An example of planner plugin for MoveIt -->
    <moveit_core plugin="${prefix}/doc/creating_moveit_plugins/lerp_motion_planner/lerp_interface_plugin_description.xml"/>
  </export>

</package>
